--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Login Pokedex</string>
+    <string name="signin">Sign In</string>
+    <string name="login_go_register">No account yet? Create one</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
