--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="password_field_required">The password field is required</string>
     <string name="invalid_email">Invalid email</string>
     <string name="error_password_length">Password must be of minimum 8 characters length</string>
+    <string name="loading_data">Loading data</string>
     <string name="logout">Log out</string>
     <string name="cancel">Cancel</string>
     <string name="logout_question">Do you want log out?</string>
